--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   },
   "devDependencies": {
     "chai": "^3.0.0"
-  }
+  },
+  "scripts": {
+    "postinstall": "./node_modules/bower/bin/bower install"
+}
 }
